Classes about flight remodeled, JacksonConfig created, FlightReservationController created, functional software